@@ -241,7 +241,11 @@
      <listitem><para>
        otherwise, it is assumed to be a data file and is loaded.
        It is possible to specify columns in data file in this way:
-       <userinput>file.xy:1,4</userinput>
+       <userinput>file.xy:1,4</userinput>. 
+       Multiple y columns can be specified 
+       (<userinput>file.xy:1,3/4/5</userinput> 
+       or <userinput>file.xy:1,3-5</userinput>) - it will load each y column
+       as a separate dataset, with the same values of x.
      </para></listitem>
     </itemizedlist>
     There are also other parameters to the CLI and GUI versions of the program.
