@@ -28,7 +28,7 @@ public:
                           { return datsums.size() == 1 && ds == datsums[0]; }
     bool is_initialized(std::vector<DataWithSum*> const& dsds) const
                                                     { return dsds == datsums; }
-    std::string getInfo(std::vector<DataWithSum*> const& dsds);
+    std::string get_info(std::vector<DataWithSum*> const& dsds);
     int get_dof(std::vector<DataWithSum*> const& dsds);
     std::string getErrorInfo(std::vector<DataWithSum*> const& dsds, 
                              bool matrix=false);
